# koi

./: Cargo.toml  grammar.md  todo.md
c++_experiments/: CMakeLists.txt
c++_experiments/cmake/: Targets.cmake  Warnings.cmake
c++_experiments/src/: main.cpp
src/: builtin.rs  index.rs  lex.rs  logger.rs  main.rs  parse.rs
src/builtins/: cd.rs  logout.rs
